--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                  <div class="screenshot_showcase_itemname" style="color: #5491cf; font-weight: bold;">
                                     <span>Drag bottom of image to resize&nbsp;
                                     <div class="fa fa-arrow-up" style="font-size:10px;"></div></span>
-                                    <span id="shortenRightImage" style="float:right; cursor:pointer;">Shorten Right Image</span>
+                                    <span id="shortenRightImage" class="showlong" style="float:right; cursor:pointer;">Shorten Right Image</span>
                                  </div>
                                  <div class="screenshot_showcase_stats">
                                     <span class="screenshot_showcase_stat" title="Комментарии">
