--- a/index.html
+++ b/index.html
@@ -701,9 +701,11 @@
       <div class="footer_content">
          <span id="footerLogo"><img src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/footerLogo_valve.png" width="96" height="26" border="0" alt="Логотип Valve"></span>
          <span id="footerText">
-            Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
+            Powered by STEAM. <span id="version">Version #{{#vernum}}</span><br>
             Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
-            <span id="version">Version #{{#vernum}}</span>
+
+            <span>Thanks to our Patrons:
+              Hexane Networks, Max Haskiewicz
          </span>
       </div>
    </div>
