make google like me moew

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <link rel="shortcut icon" href="./images/favicon.ico">
    <meta name="apple-mobile-web-app-title" content="Steam.Design">
    <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases.">
+   <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
    <meta name="application-name" content="Steam.Design">
    <meta name="msapplication-config" content="./images/browserconfig.xml">
    <meta name="theme-color" content="#2b5797">
