--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8" />
    <title>Steam Background Cropper</title>
    <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool" />
+   <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design" />
    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
