--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <span class="filter" style="float:left; position:relative; display:none;">Filter: <input type="text" id="filterIn"></span>
             <span class="guide" style="float:left; position:relative; left:23%;"><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
-            <div id="refreshInventory" class="fa fa-refresh" title="Refresh Inventory" onclick="refreshInventory();" style="position:relative; top:2px; left:-16px; cursor:pointer; display:none;"></div>
+            <div id="refreshInventory" class="fa fa-refresh" title="Refresh Inventory" style="position:relative; top:2px; left:-16px; cursor:pointer; display:none;"></div>
             <div id="hideBacksList" class="fa fa-arrow-up" title="Hide Inventory" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
             <div id="steamAuth" style="float:right"></div>
          </div>
