requested by arkus

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                  </div>
                               </div>
                               <a style="display:none" class="screenshot_showcase_smallscreenshot screenshot_count artwork_ammount hidelong" href="http://steamcommunity.com/id/wolfenstian/images/">
-                                 <div class="screenshot_showcase_screenshot artwork_ammount hidelong">
+                                 <div class="screenshot_showcase_screenshot artwork_ammount hidelong" style="position:relative;top:2px;">
                                     + 8
                                  </div>
                               </a>
