import profilev2 globalv2 and shared_global

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                  <span class="friendPlayerLevelNum">63</span>
                               </div>
                            </div>
-                           <div class="profile_header_badge">
+                           <div class="profile_header_badge" style="position:relative;top:9px;">
                               <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;"></a>
                            </div>
                         </div>
@@ -173,7 +173,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" onclick="toggleCustomize()">
+                        <div class="btn_profile_action btn_medium" style="left:7px; position:relative;top:9px;" onclick="toggleCustomize()">
                            <span style=" text-align:center; ">Customize Cropping</span>
                         </div>
 
