--- a/index.html
+++ b/index.html
@@ -148,12 +148,15 @@
                                  <div class="newmodal_content">
                                     <div class="market_dialog_content">
                                        <div class="market_dialog_iteminfo">
-                                          <div class="btn_profile_action btn_medium" id="toggleLong" onclick="toggleLong()">
+                                          <div class="btn_profile_action btn_medium" id="toggleLong">
                                              <span class="toggletext" style="text-align:center; ">Toggle to Short Images</span></div>
-                                          <div class="btn_profile_action btn_medium showlong" id="shortenRightImage"><span id="shortenText" style="text-align:center;">Shorten Right Image</span></div>
+                                          <div class="btn_profile_action btn_medium showlong showlong_buttons" id="shortenRightImage"><span id="shortenText" style="text-align:center;">Shorten Right Image</span></div>
+                                        <!--  <div class="gray_bevel for_text_input showlong_buttons" style="position:relative;display:block;height:15px;width:165px;">
+                                             <input class="dynInput" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
+                                          </div> -->
                                           <div id="esColors" style="position:relative;top:5px;">
                                              <a href="https://www.enhancedsteam.com/" target="_blank">Enhanced Steam Colors: &nbsp;</a>
-                                             <select id="colorChange" onchange="addProfileColor(this)">
+                                             <select id="colorChange" onchange="esColorLoad(this)">
                                             <option value="0">Default</option>
                                             <option value="1">Blue</option>
                                             <option value="2">Clear</option>
