--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                                           <div class="btn_profile_action btn_medium" id="toggleLong" onclick="toggleLong()">
                                              <span class="toggletext" style="text-align:center; ">Toggle to Short Images</span></div>
                                           <div class="btn_profile_action btn_medium showlong" id="shortenRightImage"><span id="shortenText" style="text-align:center;">Shorten Right Image</span></div>
+                                          <div class="commentthread_subscribe_ctn checked" id="commentthread_Profile_76561198048498731_0_subscribe_checkbox">
+                                             <span class="commentthread_subscribe_checkbox">
+                                               <span class="commentthread_subscribe_check"></span>
+                                             </span>
+                                             <span class="commentthread_subscribe_desc">
+                                               Subscribe to thread					</span>
+                                          </div>
                                           <div id="esColors" style="position:relative;top:5px;">
                                              <a href="https://www.enhancedsteam.com/" target="_blank">Enhanced Steam Colors: &nbsp;</a>
                                              <select id="colorChange" onchange="addProfileColor(this)">
