--- a/index.html
+++ b/index.html
@@ -307,14 +307,14 @@
                                     <div id="r11" class="r1"></div>
                                  </div>
                               </div>
-                              <div id="r12r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong1 rightimages">
+                              <div id="r12r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong1 rightimages">
                                  <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
-                                    <div id="r12"></div>
+                                    <div id="r12" class="rightimages"></div>
                                  </div>
                               </div>
-                              <div id="r13r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong1 rightimages">
+                              <div id="r13r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong1 rightimages">
                                  <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'https://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
-                                    <div id="r13"></div>
+                                    <div id="r13" class="rightimages"></div>
                                  </div>
                               </div>
                               <a style="display:none;position:relative;top:2px;" class="screenshot_showcase_smallscreenshot screenshot_count artwork_ammount_1 hidelong1" href="https://steamcommunity.com/id/wolfenstian/images/">
@@ -352,12 +352,12 @@
                               </div>
                               <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong2">
                                  <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605824&amp;insideModal=1', 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605824', 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605824', true );">
-                                    <div id="r22"></div>
+                                    <div id="r22" class="rightimages"></div>
                                  </div>
                               </div>
                               <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong2">
                                  <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605839&amp;insideModal=1', 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605839', 'https://steamcommunity.com/sharedfiles/filedetails/?id=299605839', true );">
-                                    <div id="r23"></div>
+                                    <div id="r23" class="rightimages"></div>
                                  </div>
                               </div>
                               <a class="screenshot_showcase_smallscreenshot screenshot_count artwork_ammount_2 hidelong2" href="https://steamcommunity.com/id/wolfenstian/screenshots/">
