--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
                                  <div class="newmodal_content">
                                     <div class="market_dialog_content">
                                        <div class="market_dialog_iteminfo">
+                                         <div class="bb_h1 customize_textbox" id="cache_text">
+                                            <b>It seems you dont have latest version cached. Please wait or press ctrl + shift + r to get the latest version.</b>
+                                         </div>
                                           <div class="market_listing_row market_recent_listing_row">
                                              <div class="bb_h1 customize_textbox">
                                                 <b>Artwork Showcase:</b>
