hide a non-implemented feature

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                                                       </span>
                                                       <span class="commentthread_subscribe_desc">Shorten Right Image</span>
                                                    </div>
-                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox" style="position:relative;display:inline-block;height:15px;width:165px;top:2px;">
-                                                      <input class="dynInput" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
+                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
+                                                      <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
-                                                   <span class="btn_grey_white_innerfade btn_small">
+                                                   <span class="btn_grey_white_innerfade btn_small hidden">
                                                <span>Reset Height</span>
                                                    </span>
                                                 </div>
@@ -208,10 +208,10 @@
                                                       </span>
                                                       <span class="commentthread_subscribe_desc">Shorten Right Image</span>
                                                    </div>
-                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox" style="position:relative;display:inline-block;height:15px;width:165px;top:2px;">
-                                                      <input class="dynInput" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
+                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
+                                                      <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
-                                                   <span class="btn_grey_white_innerfade btn_small">
+                                                   <span class="btn_grey_white_innerfade btn_small hidden">
                                                 <span>Reset Height</span>
                                                    </span>
                                                 </div>
