--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                                    <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
                                                       <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
-                                                   <span class="btn_grey_white_innerfade btn_small hidden">
+                                                   <span class="btn_grey_white_innerfade btn_small hidden" style="display:none">
                                                <span>Reset Height</span>
                                                    </span>
                                                 </div>
@@ -211,7 +211,7 @@
                                                    <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
                                                       <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
-                                                   <span class="btn_grey_white_innerfade btn_small hidden">
+                                                   <span class="btn_grey_white_innerfade btn_small hidden" style="display:none">
                                                 <span>Reset Height</span>
                                                    </span>
                                                 </div>
